package entity;

/**
 * Represents the measurement system used for a quantity,
 * e.g. METRIC (g, ml) or IMPERIAL (oz, cup).
 */

public enum MeasurementSystem {
    METRIC,
    IMPERIAL
}
