package use_case.convert_units;

public interface ConvertUnitsInputBoundary {
    void execute(ConvertUnitsInputData inputData);
}
